--- a/WindowsFormsApplication1/MercadoEnvio.csproj
+++ b/WindowsFormsApplication1/MercadoEnvio.csproj
@@ -322,6 +322,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Scripts\MASTERDBA-Drop.sql" />
+    <Content Include="Scripts\MASTERDBA.SP_GetPublicaciones.StoredProcedure.sql" />
     <Content Include="Scripts\SP\MASTERDBA.SP_BloqUser.StoredProcedure.sql" />
     <Content Include="Scripts\SP\MASTERDBA.SP_DeleteRol.StoredProcedure.sql" />
     <Content Include="Scripts\SP\MASTERDBA.SP_DeleteRolFuncionalidad.StoredProcedure.sql" />
