--- a/WindowsFormsApplication1/MercadoEnvio.csproj
+++ b/WindowsFormsApplication1/MercadoEnvio.csproj
@@ -370,6 +370,7 @@
     <Content Include="Scripts\SP\MASTERDBA.SP_InsertEmpresa.StoredProcedure.sql" />
     <Content Include="Scripts\SP\MASTERDBA.SP_InsertNewCalificacion.StoredProcedure.sql" />
     <Content Include="Scripts\SP\MASTERDBA.SP_InsertOferta.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_InsertPublicacion.StoredProcedure.sql" />
     <Content Include="Scripts\SP\MASTERDBA.SP_InsertRol.StoredProcedure.sql" />
     <Content Include="Scripts\SP\MASTERDBA.SP_InsertRolFuncionalidad.StoredProcedure.sql" />
     <Content Include="Scripts\SP\MASTERDBA.SP_InsertRubro.StoredProcedure.sql" />
