--- a/WindowsFormsApplication1/MercadoEnvio.csproj
+++ b/WindowsFormsApplication1/MercadoEnvio.csproj
@@ -117,6 +117,7 @@
     <Compile Include="ComprarOfertar\MainPublicacion.Designer.cs">
       <DependentUpon>MainPublicacion.cs</DependentUpon>
     </Compile>
+    <Compile Include="DataManagers\DataManagerActualizacion.cs" />
     <Compile Include="DataManagers\DataManagerTipoPublicacion.cs" />
     <Compile Include="DataManagers\DataManagerCalificacion.cs" />
     <Compile Include="DataManagers\DataManagerCompras.cs" />
@@ -219,6 +220,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Servicios\ActualizacionServices.cs" />
     <Compile Include="Servicios\CalificacionesServices.cs" />
     <Compile Include="Servicios\TiposPublicacionServices.cs" />
     <Compile Include="Servicios\ComprasServices.cs" />
