--- a/WindowsFormsApplication1/MercadoEnvio.csproj
+++ b/WindowsFormsApplication1/MercadoEnvio.csproj
@@ -392,6 +392,7 @@
     <Content Include="Scripts\SP\MASTERDBA.VW_Publicaciones.View.sql" />
     <Content Include="Scripts\SP\MASTERDBA.VW_Usuarios.View.sql" />
     <Content Include="Scripts\SP\Script.sql" />
+    <Content Include="Scripts\SP\SP_ConfigurarFechas.sql" />
     <Content Include="Scripts\SP\VW_Ofertas.sql" />
     <None Include="Resources\fastreverse.JPG" />
     <None Include="Resources\Back.jpg" />
